tests/ui/de-tuple-struct.rs
use jayson::Jayson;

#[derive(Jayson)]
struct TupleStruct(i32, i32);

fn main() {}
